--- a/src/main/resources/templates/guestbook.html
+++ b/src/main/resources/templates/guestbook.html
@@ -37,6 +37,27 @@
 					</div>
 					<div class="card-footer">
 						<footer class="date" th:text="${#temporals.format(entry.date, 'dd. MMMM yyyy - HH:mm')}">Datum</footer>
+						<footer>
+							<div>
+								<div th:id="'likeCount-' + ${entry.id}">0 Likes</div>
+								<button class="like" th:data-entry-id="${entry.id}" onclick="likeFunction(this)"> Like </button>
+
+							</div>
+							<script>
+								let likeCount = 0;
+								function likeFunction(button) {
+									button.disabled = true;
+									button.innerText = "Gefällt mir!";
+
+									const entryId = button.getAttribute('data-entry-id');
+
+									const likeText = document.querySelector('#likeCount-' + entryId);
+									const currentLikes = likeText.textContent.split(' ')[0]; // Extrahiere die aktuelle Anzahl der Likes
+									const newLikes = parseInt(currentLikes, 10) + 1; // Erhöhe die Like-Anzahl
+									likeText.textContent = newLikes === 1 ? newLikes + " Like" : newLikes + " Likes";
+								}
+							</script>
+						</footer>
 					</div>
 				</div>
 			</div>
@@ -49,7 +70,7 @@
 				<div th:if="${#fields.hasErrors('name')}" class="invalid-feedback" th:text="#{guestbook.form.name.required}">Please provide a name.</div> 
 			</div>
 			<div class="form-group">
-				<label for="text" th:text="#{guestbook.form.text}">Text</label><br /> 
+				<label for="text" th:text="#{guestbook.form.text}">Text</label><br />
 				<textarea th:field="*{text}" th:errorclass="is-invalid" class="form-control" required="required"></textarea>
 				<div th:if="${#fields.hasErrors('text')}" class="invalid-feedback" th:text="#{guestbook.form.text.required}">Please provide a text.</div>
 			</div>
